<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/SetInicio2"
        android:fontFamily="@font/greatvibesregular"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvPuntos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Aciertos"
        android:fontFamily="@font/greatvibesregular"
        android:textSize="30sp"
        android:textColor="@color/red_dark" />
    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/ivEntrar"
        android:layout_width="wrap_content"
        android:layout_height="340dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/bistec"/>
    <TextView
        android:id="@+id/tvGanador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/Ganaste"
        android:fontFamily="@font/greatvibesregular"
        android:textSize="30sp"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/Reiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/reiniciar"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/verRankin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/SbtRanking"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</LinearLayout>