<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Transision.TransisionActivity">

    <ScrollView
        android:id="@+id/LayoutProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:lottie_fileName="double-click.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <TextView
                android:id="@+id/textViewCargando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center" />

            <ProgressBar
                android:id="@+id/progressBarCargando"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/menuJuegoTrans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/adView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fotoPerfil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="clip_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/bistec"
                    app:border_color="@color/azul"
                    app:border_width="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/NombreUid"
                    app:layout_constraintEnd_toStartOf="@+id/animation_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/NombreUid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="nombre"
                    android:fontFamily="@font/ayuma2yk"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toTopOf="@+id/PuntosUid"
                    app:layout_constraintEnd_toEndOf="@+id/fotoPerfil"
                    app:layout_constraintStart_toStartOf="@+id/fotoPerfil"
                    app:layout_constraintTop_toBottomOf="@+id/fotoPerfil" />

                <TextView
                    android:id="@+id/PuntosUid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/greatvibesregular"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="puntos totales "
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/NombreUid"
                    app:layout_constraintStart_toStartOf="@+id/NombreUid"
                    app:layout_constraintTop_toBottomOf="@+id/NombreUid" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fotoPerfil"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="waitlotti.json"
                    app:lottie_loop="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/buttonJugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/fuccia"
                android:padding="16dp"
                android:text="@string/SbtJugarSo"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rosa"
                android:padding="16dp"
                android:text="@string/SbtJugarOnline"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonBuscarPartida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/SbtBuscarPartida"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/buttonRanking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="16dp"
                android:text="@string/SbtRanking"
                android:textColor="@android:color/background_light" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:src="?attr/actionModeShareDrawable"
                    android:tint="@color/red_dark"
                    app:backgroundTint="@color/azul"
                    app:fabSize="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/fuccia"
                    app:showMotionSpec="@android:anim/cycle_interpolator"
                    tools:ignore="MissingClass" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="8dp"
                    android:src="@android:drawable/ic_delete"
                    android:tint="@color/colorPrimaryDark"
                    app:backgroundTint="@color/rosado"
                    app:fabSize="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/azul"
                    app:showMotionSpec="@android:anim/cycle_interpolator" />

                <TextView
                    android:id="@+id/tituloCont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ayuma2yk"
                    android:text="Partidas disponibles."
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/fab"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <include
                    layout="@layout/content_onlineuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tituloCont" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/Banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>